--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,28 @@
+appnope==0.1.0
+backcall==0.1.0
+certifi==2018.4.16
+chardet==3.0.4
+decorator==4.3.0
+defusedxml==0.5.0
 Django==1.11
+django-allauth==0.36.0
+idna==2.6
+ipython==6.4.0
+ipython-genutils==0.2.0
+jedi==0.12.0
+oauthlib==2.1.0
+parso==0.2.0
+pexpect==4.5.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+python3-openid==3.1.0
 pytz==2018.4
+requests==2.18.4
+requests-oauthlib==0.8.0
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
